--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,19 +1,16 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<title>Profile</title>
+<title>Playlists</title>
 <link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
 <div class="container">
 <div class="card">
-<h2>User Profile</h2>
-<p>Name: {{ username }}</p>
-<p>Role: {{ role }}</p>
+<h2>Your Playlists</h2>
+<p>Create, manage and enjoy your music collections.</p>
 </div>
 </div>
 </body>
 </html>
-
